--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1746,14 +1746,14 @@ P_e = \frac{1}{e_P} \text{ and } P_{\rho} = -\frac{e_{\rho}}{e_P}  \, ,
 \section{Derivation of the dissipative terms for the Euler equations with variable area using the entropy minimum principle} \label{app:diss_terms}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Euler equations with variable area are recalled here
+%
+Euler equations (without viscous regularization) with variable area are recalled here
 %
 \begin{subequations}
 \label{app:euler_variable_A}
 %
 \begin{equation}
-\partial_t \left( \rho A \right) + \div \left( \rho \vec{u} A \right) = 0 \\
+\partial_t \left( \rho A \right) + \div \left( \rho \vec{u} A \right) = 0 
 \end{equation}
 %
 \begin{equation}
@@ -1765,35 +1765,48 @@ Euler equations with variable area are recalled here
 \end{equation}
 \end{subequations}
 %
-Assuming the existence of an entropy $s$ function of the density $\rho$ and the internal energy $e$, the above system of equations admits the following entropy residual \cite{Toro}
-%
-\begin{equation*}
-A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) \geq 0 
-\end{equation*}
-%
-% when assuming $Ps_e + \rho^2 s_{\rho} =0$. 
-An entropy function $s$ verifying this equation is also a solution of the second thermodynamic law for a reversible system, $T ds = de - \frac{P}{\rho^2} d \rho$, which implies $s_e = T^{-1} \geq 0$. \\
-In order to apply the entropy viscosity method, dissipative terms are added to each equation. Then, the entropy residual is derived again: extra terms due to the dissipative terms will appear in the left-hand side. In order to prove the minimum entropy principle, these extra terms are either recast as conservative term, or shown to be positive. \\ 
-The multi-D Euler equations with variable area with dissipative terms, yield:
+The specific entropy is assumed \tcr{can it be depend on other variables?} to be a function of the density $\rho$ and the internal energy $e$, i.e., $s(e,\rho)$ , the above system of equations satisfies the minimum entropy principle \cite{Toro} \tcr{is this really shown in Toro?}
 %
 \begin{equation}
-\label{app:euler_variable_A_diss}
-\left\{ 
-\begin{array}{lll}
-\partial_t \left( \rho A \right) + \div \left( \rho \vec{u} A \right) = \div f \\
-\partial_t \left( \rho \vec{u} A \right) + \div \left[A\left( \rho \vec{u} \otimes \vec{u} + P \mathbf{I} \right) \right] = P \grad A + \div g \\
-\partial_t \left( \rho E A\right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div h
-\end{array}
-\right. 
+A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) \geq 0 \, .
 \end{equation}
 %
-where $f$, $g$ and $h$ are the dissipative terms to derive. Starting from the modified system of equations given in \eqt{app:euler_variable_A_diss}, the entropy residual is derived again:
+The entropy function $s$ satisfies the second law of thermodynamics, $T ds = de - \frac{P}{\rho^2} d \rho$, which implies $s_e := T^{-1}$ and $s_\rho := -P T^{-1} \rho^{-2}$. One can show that \cite{guermond popow theoretical paper}
 %
-\begin{eqnarray}
+\begin{equation}
+s_e = T^{-1} \geq 0 \text{ and }
+Ps_e + \rho^2 s_{\rho} 
+\end{equation}
+%
+In order to apply the entropy viscosity method to the variable-area Euler equations, dissipative terms need to be added to each equation in \eqt{app:euler_variable_A}. The functional forms of these terms need to be such that the entropy residual derived with these terms present also satisfies the minimum entropy principle. 
+%By inspecting the extra terms that will appear in the entropy residual, due to the dissipative terms will appear in the left-hand side. 
+To prove the minimum entropy principle, the extra terms appearing in the entropy residual are either recast as conservative terms or shown to be positive. The rest of this appendix presents this demonstration. 
+Following \cite{guermond popow theoretical paper}, we first write the variable-area equation with dissipative terms. 
+%
+%
+\begin{subequations}
+\label{app:euler_variable_A_diss}
+%
+\begin{equation}
+\partial_t \left( \rho A \right) + \div \left( \rho \vec{u} A \right) = \div f 
+\end{equation}
+%
+\begin{equation}
+\partial_t \left( \rho \vec{u} A \right) + \div \left[A\left( \rho \vec{u} \otimes \vec{u} + P \mathbf{I} \right) \right] = P \grad A + \div g
+\end{equation}
+% 
+\begin{equation}
+\partial_t \left( \rho E A \right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div h \,.
+\end{equation}
+\end{subequations}
+%
+where $f$, $g$ and $h$ are dissipative fluxes to be determined. Starting from the modified system of equations given in \eqt{app:euler_variable_A_diss}, the entropy residual is derived again. The derivation requires the following steps : express the governing laws in terms of primitive variables $(\rho, \vec{u}, e)$, multiply the continuity equation by $\rho s_\rho$ and the internal energy equation by $s_e$, and invoke multivariate chain rule, e.g., $\partial s /\partial x = s_e \partial e /\partial x + s_\rho \partial \rho /\partial x$. These steps are similar to the ones form the standard Euler equations \cite{guermond popow theoretical paper}. Some of the lengthy algebra is omitted here. The above steps yield:
+%
+\begin{multline}
 \label{eq:ent_res_app}
-A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) &=& s_e \left[ \div h + g : \grad u + \left( \frac{u^2}{2}-e \right) \div f \right] \nonumber\\
-&+& \rho s_{\rho} \div f
-\end{eqnarray}
+A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div h + g : \grad u + \left( \frac{u^2}{2}-e \right) \div f \right] 
++ \rho s_{\rho} \div f
+\end{multline}
 %
 The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is proven positive. The right hand-side of \eqt{eq:ent_res_app} can be simplified using the following relations, $g = A \mu \grad^s \vec{u} + \vec{u} \otimes f$ and $h = \tilde{h} + \vec{u} \cdot g - 0.5 || \vec{u} ||^2 f$, which yields:
 %
