added my question in appendix 2

--- a/low_mach.tex
+++ b/low_mach.tex
@@ -1808,7 +1808,8 @@ A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div h +
 + \rho s_{\rho} \div f
 \end{multline}
 %
-The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is proven positive. The right hand-side of \eqt{eq:ent_res_app} can be simplified using the following relations, $g = A \mu \grad^s \vec{u} + \vec{u} \otimes f$ and $h = \tilde{h} + \vec{u} \cdot g - 0.5 || \vec{u} ||^2 f$, which yields:
+The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is positive. The right hand-side of \eqt{eq:ent_res_app} can be simplified using the following relations, $g = A \mu \grad^s \vec{u} + \vec{u} \otimes f$ and $h = \tilde{h} + \vec{u} \cdot g - 0.5 || \vec{u} ||^2 f$, which yields:
+\tcr{I can't get the equation below from the one before with your definitions of h,g,f}
 %
 \begin{eqnarray}
 \label{eq:ent_res_app2}
