--- a/low_mach.tex
+++ b/low_mach.tex
@@ -906,6 +906,12 @@ cells & density         & rate   & pressure        & rate    & velocity         
 \end{center}
 \end{table}
 %
+\tcb{I did 
+\begin{equation}
+c = \frac{P_1}{P_2}
+\end{equation}
+Valentin did the same thing in his paper.
+}
 \tcr{In \tbl{tbl:l1_norm_liq}, I cannot get your rate values. For example, set
 \begin{eqnarray*}
 P_1 &=& 8.4471 \times 10^{2} \\
@@ -1027,19 +1033,12 @@ $640$ & $5.2191$ $10^{-2}$  & $0.44190$ & $9.4217$ $10^{3}$ & $0.43790$ & $16.91
 \end{center}
 \nonumber
 \end{table}
-%It is also interesting to investigate the effect of the first-order viscosity onto the steady-state solution. In \fig{fig:1d_nozzle_vap_fo_ev}, the steady-state velocity profile is plotted when using the first- and second-order viscosity coefficients: the main difference between the two numerical solution is in the resolution of the shock around $x=0.8m$. The first-order viscosity coefficient is by definition more dissipative and will smooth out the solution. In the other hand, the high-order viscosity better resolves the shock and allow high-order accuracy away from the shock region. It is also noted that the numerical solution obtained with the first-order viscosity coefficient is satisfying: this is due to the nature of the solution that contains a standing shock, and thus, will force the shock to form even with large artificial dissipation. 
-%\begin{figure}[H]
-%\centering
-%\includegraphics[width=\textwidth]{vapor_velocity_fo_and_ev_400.png}
-%\caption{Velocity profile at steady-state with the first- and second-order viscosity for a mesh with $400$ cells.}
-%\label{fig:1d_nozzle_vap_fo_ev}
-%\end{figure}
 
 %---------------------------------------------------------------------------------------------------
 \subsection{Leblanc shock tube} \label{sec:Leblanc}
 %---------------------------------------------------------------------------------------------------
 
-The 1-D Leblanc shock tube is a Riemann problem designed to test the robustness and the accuracy of stabilization methods. The initial conditions are given in \tbl{tbl:ic_1d_tests}. The ideal gas equation of state (with $\gamma=5/3$) is used to compute the pressure. % with the following heat capacity ratio $\gamma=5/3$.
+The 1-D Leblanc shock tube is a Riemann problem designed to test the robustness and the accuracy of stabilization methods. The initial conditions are given in \tbl{tbl:ic_1d_tests}. The ideal gas equation of state (with $\gamma=5/3$) is used to compute the pressure.
 This test is computationally challenging because of the large pressure ratio at the shock interface.
 The computational domain consists of a 1-D straight pipe of length $L=9m$ with the initial interface located at $x=2m$. At $t=0.s$, the interface is removed. The numerical solution is run until $t=4 s$ and the density, momentum and total energy profiles are given in \fig{fig:1d_leblanc}, along with the exact solution. The viscosity coefficients are also plotted in \fig{fig:1d_leblanc_visc}. These plots were  run with three different uniform mesh of $800$, $3200$ and $6000$ cells and a constant $CFL = 1$.
 \begin{figure}[H]
@@ -1077,8 +1076,7 @@ The computational domain consists of a 1-D straight pipe of length $L=9m$ with t
         \caption{Exact and Numerical solutions for the 1-D Leblanc shock tube at $t=4 s$.}\label{fig:1d_leblanc}
 \end{figure}
 %
-The density, momentum and total energy profiles are provided in \fig{fig:1d_leblanc}. In \fig{fig:1d_leblanc_density}, the shock region is zoomed in for better resolution: the shock is well resolved and do not present any oscillations. We also observed that the shock position computed numerically converges to the exact position under mesh refinement. The contact wave at $x=4.5m$ can be seen in \fig{fig:1d_leblanc_density}. The entropy viscosity coefficient profile is shown in \fig{fig:1d_leblanc_visc} and behaves as expected: it saturates to the first-order viscosity in the shock region, thus preventing oscillations from forming. At the location of the contact wave, a smaller peak is observed that is due to the presence of the jumps in the definition of the entropy viscosity coefficient (\eqt{eq:final_def_visc_coeff}).  The Mach number, not plotted, is of the order of $1.3$ right before the shock and reaches a maximum value close to $5$ in the contact region.\tcr{you said it was also subsonic. where?}\\
-% For each plot in \fig{fig:1d_lebalnc}, the numerical solution run the first-order viscosity is also plotted: it is observed that the 
+The density, momentum and total energy profiles are provided in \fig{fig:1d_leblanc}. In \fig{fig:1d_leblanc_density}, the shock region is zoomed in for better resolution: the shock is well resolved and do not present any oscillations. We also observed that the shock position computed numerically converges to the exact position under mesh refinement. The contact wave at $x=4.5m$ can be seen in \fig{fig:1d_leblanc_density}. The entropy viscosity coefficient profile is shown in \fig{fig:1d_leblanc_visc} and behaves as expected: it saturates to the first-order viscosity in the shock region, thus preventing oscillations from forming. At the location of the contact wave, a smaller peak is observed that is due to the presence of the jumps in the definition of the entropy viscosity coefficient (\eqt{eq:final_def_visc_coeff}).  The Mach number, not plotted, is of the order of $1.3$ right before the shock and reaches a maximum value close to $5$ in the contact region.\tcr{you said it was also subsonic. where?} \tcb{No it is not.}\\
 Once again, a convergence study is performed in order to prove convergence of the numerical solution to the exact solution. As in the previous example (the vapor phase in the 1-D nozzle, \sct{sec:steam_nozzle}), the expected convergence rates in the L$_1$ and L$_2$ norms are $1$ and $1/2$, respectively. The exact solution was obtained by running a 1-D Riemann solver and used as the reference solution to compute the L$_1$ and L$_2$-norms that are reported in \tbl{tbl:l1_norm_leblanc} and \tbl{tbl:l2_norm_leblanc} for the conservative variables: density, momentum and total energy. The convergence rates are approaching the theoretical values.
 
 \begin{table}[!htbp]
@@ -1098,75 +1096,21 @@ $12800$ & $3.3950948$ $10^{-4}$ & $0.92533116$ & $1.5958118$ $10^{-4}$ & $0.9223
  \end{tabular}
 \end{center}
 \end{table}
-
-%\begin{table}[!htbp]
-%\begin{center}
- %\caption{\label{tbl:l1_norm_leblanc} L$_1$ norm of the error for the 1-D Leblanc test at $t=4s$.}
- %\begin{tabular}{|c|c|c|c|c|c|c|}
- %\hline
-   %cells & density & rate & momentum & rate \\
- %\hline
-%$100$   & $1.0354722$ $10^{-2}$ & $-$          & $3.5471714$ $10^{-3}$ & $-$           \\  \hline
-%$200$   & $7.2680512$ $10^{-3}$ & $0.51064841$ & $2.5933119$ $10^{-3}$ & $0.45187331$  \\  \hline
-%$400$   & $5.0825628$ $10^{-3}$ & $0.51601245$ & $2.0668092$ $10^{-3}$ & $0.32739054$  \\  \hline
-%$800$   & $3.4025056$ $10^{-3}$ & $0.57895861$ & $1.4793838$ $10^{-3}$ & $0.48240884$  \\  \hline
-%$1600$  & $2.1649953$ $10^{-3}$ & $0.65223363$ & $9.7152832$ $10^{-4}$ & $0.6066684$   \\  \hline
-%$3200$  & $1.2465433$ $10^{-3}$ & $0.79643094$ & $5.5937409$ $10^{-4}$ & $0.79644263$  \\  \hline
-%$6400$  & $6.4476928$ $10^{-4}$ & $0.95107804$ & $3.0244198$ $10^{-4}$ & $0.88715502$  \\  \hline
-%$12800$ & $3.3950948$ $10^{-4}$ & $0.92533116$ & $1.5958118$ $10^{-4}$ & $0.9223679$   \\  \hline
- %\end{tabular}
- %\begin{tabular}{|c|c|c|}
-%\hline
-%cells & total energy & rate \\ \hline
-  %$100$  & $0.0014033046$        & $-$           \\ \hline
-  %$200$  & $9.8611746$ $10^{-4}$ & $0.5089968$   \\ \hline
-  %$400$  & $7.7844421$ $10^{-4}$ & $0.34116585$  \\ \hline
-  %$800$  & $5.5702549$ $10^{-4}$ & $0.48285029$  \\ \hline
-  %$1600$ & $3.5720171$ $10^{-4}$ & $0.64100438$  \\ \hline
-  %$3200$ & $2.0491799$ $10^{-4}$ & $0.80169235$  \\ \hline
-  %$6400$ & $1.0914891$ $10^{-4}$ & $0.90874889$  \\ \hline
- %$12800$ & $5.7909794$ $10^{-5}$ & $0.91441847$  \\ \hline
-%\end{tabular}
-%\end{center}
-%\nonumber
-%\end{table}
 %
 \begin{table}[!htbp]
 \begin{center}
- \caption{\label{tbl:l2_norm_leblanc} L$_2$ norm of the error for the 1-D Leblanc test at $t=4s$.\\ \tcr{please change table formatting as I have done above. In the final paper, they use smaller fonts for tables so it may fit fine in a single tabular}
-}
+ \caption{\label{tbl:l2_norm_leblanc} L$_2$ norm of the error for the 1-D Leblanc test at $t=4s$.}
  \begin{tabular}{|c|c|c|c|c|c|c|}
  \hline
-   cells & density & rate & momentum & rate \\
- \hline
-$100$ &   $5.7187851$ $10^{-3}$ & $-$ & $1.7767236$ $10^{-3}$ & $-$ \\
-  \hline
-$200$  &  $3.8995238$ $10^{-3}$ & $0.55241073$ & $1.4913161$ $10^{-3}$ & $0.25263314$ \\
-   \hline
-$400$ & $2.8103526$ $10^{-3}$   & $0.4725468$ & $1.3305301$ $10^{-3}$ & $0.164585$ \\
- \hline
-$800$ & $2.1081933$ $10^{-3}$   & $0.41474398$ & $1.1398931$ $10^{-3}$ & $0.22310254$ \\
- \hline
-$1600$ & $1.5731052$ $10^{-3}$  & $0.42239201$ & $9.0394227$ $10^{-4}$ & $0.33459602$ \\
- \hline
-$3200$&$1.0610667$ $10^{-3}$    & $0.56809979$ & $6.2735595$ $10^{-4}$ & $0.52694639$ \\
- \hline
-$6400$&$7.3309974$ $10^{-4}$    & $0.53343397$ & $4.4545754$ $10^{-4}$ & $0.49399631$ \\
- \hline
- $12800$&$5.1020991$ $10^{-4}$  & $0.52291857$ & $3.1266758$ $10^{-4}$ & $0.5106583$ \\
- \hline
-\end{tabular}
-\begin{tabular}{|c|c|c|}
-\hline
-cells & total energy & rate \\ \hline
-$100$ & $7.6112265$  $10^{-4}$& $-$\\ \hline
-$200$ & $5.5497308$ $10^{-4}$& $0.45571115$\\ \hline
-$400$ & $4.6063172$ $10^{-4}$ & $0.26880405$\\ \hline
-$800$ & $3.7798953$ $10^{-4}$ & $0.28526749$\\ \hline
-$1600$ & $2.9584646$ $10^{-4}$ & $0.35349763$\\ \hline
-$3200$ & $2.054455$ $10^{-4}$ & $0.52609289$\\ \hline
-$6400$ & $1.4670834$ $10^{-4}$ & $0.48580482$\\ \hline
-$12800$ & $1.0299897$ $10^{-5}$ & $0.51032105$\\  \hline
+   cells & density & rate & momentum & rate & total energy & rate \\ \hline
+$100$ &   $5.7187851$ $10^{-3}$ & $-$ & $1.7767236$ $10^{-3}$ & $-$ & $7.6112265$  $10^{-4}$& $-$\\   \hline
+$200$  &  $3.8995238$ $10^{-3}$ & $0.55241073$ & $1.4913161$ $10^{-3}$ & $0.25263314$ &  $5.5497308$ $10^{-4}$& $0.45571115$\\ \hline
+$400$ & $2.8103526$ $10^{-3}$   & $0.4725468$ & $1.3305301$ $10^{-3}$ & $0.164585$ & $4.6063172$ $10^{-4}$ & $0.26880405$\\ \hline
+$800$ & $2.1081933$ $10^{-3}$   & $0.41474398$ & $1.1398931$ $10^{-3}$ & $0.22310254$ & $3.7798953$ $10^{-4}$ & $0.28526749$\\ \hline
+$1600$ & $1.5731052$ $10^{-3}$  & $0.42239201$ & $9.0394227$ $10^{-4}$ & $0.33459602$ & $2.9584646$ $10^{-4}$ & $0.35349763$\\ \hline
+$3200$&$1.0610667$ $10^{-3}$    & $0.56809979$ & $6.2735595$ $10^{-4}$ & $0.52694639$ & $2.054455$ $10^{-4}$ & $0.52609289$\\ \hline
+$6400$&$7.3309974$ $10^{-4}$    & $0.53343397$ & $4.4545754$ $10^{-4}$ & $0.49399631$ & $1.4670834$ $10^{-4}$ & $0.48580482$\\ \hline
+ $12800$&$5.1020991$ $10^{-4}$  & $0.52291857$ & $3.1266758$ $10^{-4}$ & $0.5106583$ & $1.0299897$ $10^{-5}$ & $0.51032105$\\  \hline
 \end{tabular}
 \end{center}
 \nonumber
@@ -1213,7 +1157,7 @@ The 1-D slow moving shock consists of a shock wave moving from left to right wit
 %
 The numerical solution, obtained with 200 equally-spaced cells, is given in \fig{fig:low_moving_shock} and is compared to the exact solution obtained from a Riemann solver. We use a $CFL$ of $1$. With this $CFL$ value, it takes about $50$ time steps for the shock to traverse one cell.
 %
-The numerical results are in good agreement with the exact solution and do not display any post-shock noise. The rarefaction and contact waves are not visible on \fig{fig:profiles_sms} since they exited the computational domain through the left pressure boundary condition earlier. As explained in \cite{roberts}, Godunov's type method usually fails to resolve a slow moving shock because of the nature of the stabilization method: the method scales as the eigenvalue of the appropriate field. In the case of a slow moving shock, the dissipation added to the system is under-estimated and leads to post-shock noise. In the case of the entropy viscosity method, the entropy residual detects the shock position and the viscosity coefficients saturate to the first-order viscosity values. The main difference between a  Godunov's type method and the entropy viscosity method relies in the definition of the first-order viscosity coefficients that are proportional to the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of the characteristic field \tcr{is field appropriate here? variable?}.
+The numerical results are in good agreement with the exact solution and do not display any post-shock noise. The rarefaction and contact waves are not visible on \fig{fig:profiles_sms} since they exited the computational domain through the left pressure boundary condition earlier. As explained in \cite{roberts}, Godunov's type method usually fails to resolve a slow moving shock because of the nature of the stabilization method: the method scales as the eigenvalue of the appropriate field. In the case of a slow moving shock, the dissipation added to the system is under-estimated and leads to post-shock noise. In the case of the entropy viscosity method, the entropy residual detects the shock position and the viscosity coefficients saturate to the first-order viscosity values. The main difference between a  Godunov's type method and the entropy viscosity method relies in the definition of the first-order viscosity coefficients that are proportional to the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of the characteristic field \tcr{is field appropriate here? variable?} \tcb{They use field in the paper I reference}.
 %
 \begin{figure}[H]
         \centering
@@ -1238,7 +1182,7 @@ The numerical results are in good agreement with the exact solution and do not d
 \subsection{Subsonic flow over a 2-D cylinder} \label{sec:cylinder}
 %---------------------------------------------------------------------------------------------------
 
-Fluid flow over a 2-D cylinder is often used as a benchmark case to test numerical schemes in the low-Mach regime \cite{I suppose some guillard papers, but many others as well}. For this test, an analytical solution is available in the incompressible limit or low-Mach limit and is often referred to as the potential flow solution \tcr{check my change}. The main features of the potential flow are the following:
+Fluid flow over a 2-D cylinder is often used as a benchmark case to test numerical schemes in the low-Mach regime \cite{LowMach1, LowMach2, LowMach3, guillard}. For this test, an analytical solution is available in the incompressible limit or low-Mach limit and is often referred to as the potential flow solution \tcr{check my change} \tcb{done}. The main features of the potential flow are the following:
 %
 \begin{itemize}
 \item The solution is symmetric: the iso-Mach countour lines are used to asses the symmetry of the numerical solution;
@@ -1251,7 +1195,7 @@ Fluid flow over a 2-D cylinder is often used as a benchmark case to test numeric
 where $\delta P$ and $M_\infty$ denote the pressure fluctuations and the inlet Mach number, respectively.
 \end{itemize}
 %
-The computational domain consists of a $1\times 1$ square with a circular hole of radius $0.05$ in its center. A $\mathbb{P}_1$ triangular mesh with $4008$ triangular elements was used to discretize the geometry. \tcr{The ideal gas equation of state, with $gamma=1.4$ is used.}At the inlet, a subsonic stagnation boundary condition is used: the stagnation pressure and temperature are computed using the following relations:
+The computational domain consists of a $1\times 1$ square with a circular hole of radius $0.05$ in its center. A $\mathbb{P}_1$ triangular mesh with $4008$ triangular elements was used to discretize the geometry. The ideal gas equation of state, with $\gamma=1.4$ is used. At the inlet, a subsonic stagnation boundary condition is used: the stagnation pressure and temperature are computed using the following relations:
 %
 \begin{equation}
 \label{eq:stagnation_relations}
@@ -1263,7 +1207,7 @@ T_0 = T\left( 1 + \frac{\gamma-1}{2} M^2 \right)
 \right.
 \end{equation}
 %
-The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet and a static pressure boundary type is used \tcr{confusing. what are you trying to say?}. The implementation of the pressure boundary conditions is done on the model of \cite{SEM}. A solid wall boundary condition is set for the top and bottom walls of the computational domain: the normal component of the velocity. The simulations are run until a steady-state is reached \tcr{explain a bit the stopping criterion for reaching SS} with a $CFL$ of $40$.
+An static pressure boundary condition is used for the outlet boundary and the following static pressure $P_s = 101,325$ $Pa$ is set. The implementation of the pressure boundary conditions is done on the model of \cite{SEM}. A solid wall boundary condition is set for the top and bottom walls of the computational domain: the normal component of the velocity. The simulations are run until a steady-state is reached with a $CFL$ of $40$. The steady-state is reached when the norm of total residual (including all equations) is lower than $10^{-12}$.
 
 Several simulations are performed, with inlet Mach numbers $M_{\text{inlet}}$ ranging from $10^{-3}$ to $10^{-7}$, and are shown in \fig{fig:cylinder}. The iso-Mach contour lines are drawn using $30$ equally-spaced intervals $2 \ 10^{-10}$ to $M_{\text{inlet}}$ and allow us to assess the symmetry of the numerical solution.
 %
@@ -1303,17 +1247,11 @@ Several simulations are performed, with inlet Mach numbers $M_{\text{inlet}}$ ra
                 \caption{$M_{\text{inlet}}=10^{-7}$}
                 \label{fig:cyl_1em7}
         \end{subfigure}
-%        \begin{subfigure}[b]{0.495\textwidth}
-%                \centering
-%                \includegraphics[width=\textwidth]{CylinderMach1em8ZoomIn.png}
-%                \caption{Steady-state solution at $M_\infty=10^{-8}$.}
-%                \label{fig:cyl_1em8}
-%        \end{subfigure}
         \caption{Iso-Mach lines for a subsonic flow over a 2-D cylinder with inlet Mach number values from ranging from $10^{-3}$ to $10^{-7}$ (steady-state solution).}
 				\label{fig:cylinder}
 \end{figure}
 %
-The velocity at the top of the cylinder and at the inlet are given for different Mach-number values (ranging from $10^{-3}$ to $10^{-7}$) in \tbl{tbl:velocity_ratio}. The ratio of the inlet velocity to the velocity at the top of cylinder is also computed and is very close to the value theoretical value of $2$ that is expected in the incompressible limit \tcr{check my mods}.
+The velocity at the top of the cylinder and at the inlet are given for different Mach-number values (ranging from $10^{-3}$ to $10^{-7}$) in \tbl{tbl:velocity_ratio}. The ratio of the inlet velocity to the velocity at the top of cylinder is also computed and is very close to the theoretical value of $2$ that is expected in the incompressible limit \tcr{check my mods} \tcb{I did}.
 %
 \begin{table}[H]
 \begin{center}
@@ -1382,11 +1320,10 @@ The static pressure $P_s = 101,325$ $Pa$ is set at the subsonic outlet. The resu
 				\label{fig:2d_hump}
 \end{figure}
 %
-The results showed in \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} correspond to the low-Mach regime. The iso-Mach lines are drawn ranging from the minimum and the maximum values (provided in each legend) using 50 equally-spaced intervals. The steady-state solution is symmetric and does not depend on the value of the inlet Mach number, as expected in the \tcr{incompressible} limit. 
+The results showed in \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} correspond to the low-Mach regime. The iso-Mach lines are drawn ranging from the minimum and the maximum values (provided in each legend) using 50 equally-spaced intervals. The steady-state solution is symmetric and does not depend on the value of the inlet Mach number, as expected in the incompressible limit. 
 
 In \fig{fig:2d_hump_mach_0p7}, the steady-state numerical solution develops a shock: the compressibility effect are no longer negligible. The iso-Mach lines are also plotted with $50$ intervals and range from $0.4$ to $1.6$. The shock is well resolved and does not display any instabilities or spurious oscillations. \\
 The results presented in \fig{fig:2d_hump} were obtained with the new definitions of the viscosity coefficients and illustrate the ability of the entropy viscosity method to correctly simulate several types of flows (subsonic and transonic flows) without tuning parameters.
-%, but by just evaluating the entropy residual that is an indicator of the entropy production.    
 
 %---------------------------------------------------------------------------------------------------
 \subsection{Supersonic flow in a compression corner} \label{sec:corner}
@@ -1395,7 +1332,7 @@ The results presented in \fig{fig:2d_hump} were obtained with the new definition
 In this last example, we consider a supersonic flow at Mach 2.5 impinging on a corner with an angle of $15^\circ$. From the oblique shock theory \cite{CompressionCorner}, an analytical solution for this supersonic flow is available and give the downstream to upstream pressure, entropy and Mach number ratios. 
 The initial conditions are chosen to be spatially uniform: the pressure and temperature are set to $P=101,325$ $Pa$ and $T=300$ $K$, respectively.  The ideal gas equation of state is used with the same parameters as in \sct{sec:hump}. The initial velocity is computed from the upstream Mach number. The inlet is supersonic and therefore, the pressure, temperature and velocity are specified using Dirichlet boundary conditions. The outlet is also supersonic and none of the characteristics enter the domain through this boundary: the values will be computed by the implicit solver.
 
-The simulation is run with $CFL=2$, until steady state is reached. A 2-D mesh made of $16,109$ $\mathbb{Q}_1$ elements is used. The ratios for pressure, entropy and Mach number computed using the  analytical and the numerical solutions are given in \tbl{tbl:corner_exact_sol}; they are in excellent agreement. \tcr{why only 2 significant digits for the analytical values but 3 for the numerical values?} The shock wave angle at steady state is also known and given by the so-called $\theta -\beta -M$ relation:
+The simulation is run with $CFL=2$, until steady state is reached. A 2-D mesh made of $16,109$ $\mathbb{Q}_1$ elements is used. The ratios for pressure, entropy and Mach number computed using the  analytical and the numerical solutions are given in \tbl{tbl:corner_exact_sol}; they are in excellent agreement. The shock wave angle at steady state is also known and given by the so-called $\theta -\beta -M$ relation:
 %
 \begin{equation}
 \tan \theta = 2 \cot \beta \frac{M^2 \sin^2 \beta -1}{M^2 \left(\gamma+\cos^2 (2\beta)\right)+2} ,
@@ -1407,9 +1344,9 @@ where $\theta$, $\beta$ and $M$ denote the corner angle, the shock wave angle, a
 \begin{center}
 \begin{tabular}{|c|c|c|}  \hline
             & analytical & numerical\\ \hline
-Pressure    & 2.47       & 2.467    \\ \hline
-Mach number &  0.74      & 0.741    \\ \hline
-Entropy     & 1.03       & 1.026    \\ \hline 
+Pressure    & 2.47       & 2.47   \\ \hline
+Mach number &  0.74      & 0.74    \\ \hline
+Entropy     & 1.03       & 1.03    \\ \hline 
 \end{tabular}
 \caption{\label{tbl:corner_exact_sol} Ratio of analytical and numerical downstream to upstream quantities for the compression corner problems (corner angle of $15^\circ$ and inlet $M=2.5$.}
 \end{center}
@@ -1448,7 +1385,6 @@ Entropy     & 1.03       & 1.026    \\ \hline
 \end{figure}
 %
 The steady-state numerical solution is given in \fig{fig:2d_corner}: the Mach number and the viscosity coefficients are plotted in \fig{fig:2d_corner_mach} and \fig{fig:2d_corner_visc}, respectively. The steady-state solution is formed of two regions of constant states, separated by the oblique shock. \fig{fig:2d_corner_visc} shows that the viscosity coefficient is large in the shock and small elsewhere, as expected. At the location of the corner ($x=-0.25m$, $y=-0.5m$), the viscosity coefficient is peaked because of the treatment of the wall boundary condition: at this particular node, the normal is not well defined and may cause some numerical errors. The 1-D graphs at $y=0$ for the pressure and the Mach number are given in \fig{fig:2d_corner_isomach}: no spurious oscillations are observed and the shock is well resolved. Finally, the difference between the inlet and outlet mass flow rates is plotted in \fig{fig:2d_convergence} which shows that the steady state is reached. 
-% Overall, the numerical solution does not show any oscillations, match the analytical solution, and the shock is well resolved.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
